--- a/client/src/components/SyllabusList.css
+++ b/client/src/components/SyllabusList.css
@@ -220,6 +220,19 @@
   border-bottom: 1px solid #f7fafc;
   color: #4a5568;
   font-weight: 500;
+  text-align: center !important;
+}
+
+/* Garantir centralização também no corpo da tabela com maior especificidade */
+.syllabus-table tbody td {
+  text-align: center !important;
+  vertical-align: middle;
+}
+
+.syllabus-table tbody td > * {
+  text-align: center !important;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .syllabus-table tbody tr {
