--- a/client/src/components/CompetenciesTable.css
+++ b/client/src/components/CompetenciesTable.css
@@ -88,6 +88,13 @@
   border-color: #235795;
 }
 
+.table-input.readonly {
+  background-color: #f5f5f5;
+  color: #666;
+  cursor: not-allowed;
+  border-color: #ddd;
+}
+
 .table-textarea {
   width: 100%;
   padding: 0.5rem;
