--- a/client/src/components/SyllabusList.css
+++ b/client/src/components/SyllabusList.css
@@ -30,9 +30,10 @@
   color: #235795;
   font-weight: 700;
   margin: 0;
-  letter-spacing: 0.5px;
-  font-family: 'Georgia', 'Times New Roman', serif;
-  font-style: italic;
+  letter-spacing: 1px;
+  font-family: 'Arial', 'Helvetica', sans-serif;
+  font-style: normal;
+  text-transform: uppercase;
 }
 
 .build-tag { display: none; }
